Revision history for Hash-int

{{$NEXT}}

0.0.6  2024-06-24T21:55:56+02:00
    - Modernize test file extension
    - Add sponsor link and buttonn
    - Update copyright year

0.0.5  2021-09-28T11:42:35+02:00
    - Add support for .push

0.0.4  2021-09-27T15:03:13+02:00
    - Fix Github confusion with Hash-str

0.0.3  2021-09-10T11:18:42+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address

0.0.2  2021-01-30T14:03:29+01:00
    - Make sure that methods only take instances

0.0.1  2021-01-16T13:25:46+01:00
    - Initial version