@@ -18,6 +18,9 @@
   ],
   "source-url": "https://github.com/lizmat/Hash-int.git",
   "tags": [
+    "NAUGHTY",
+    "HASH",
+    "INT"
   ],
   "test-depends": [
   ],
