@@ -2,12 +2,14 @@ name = Hash-int
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Hash/int.rakumod
+filename = doc/Hash-int.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
