@@ -1,0 +1,43 @@
+=begin pod
+
+=head1 NAME
+
+Hash::int - provide a hash with native integer keys
+
+=head1 SYNOPSIS
+
+=begin code :lang<raku>
+
+use Hash::int;
+
+my %hash is Hash::int = 42 => "foo", 666 => "bar";
+
+=end code
+
+=head1 DESCRIPTION
+
+Hash::int is module that provides the C<Hash::int> class to be applied
+to the initialization of an Associative, making it limit the keys to
+native integers that fit the C<int> type.  This allows this module to
+take some shortcuts, making it up to B<7x> as fast as a normal hash.
+
+=head1 AUTHOR
+
+Elizabeth Mattijsen <liz@raku.rocks>
+
+Source can be located at: https://github.com/lizmat/Hash-int . Comments and
+Pull Requests are welcome.
+
+If you like this module, or what I’m doing more generally, committing to a
+L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
+deal to me!
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2021, 2024, 2025 Elizabeth Mattijsen
+
+This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
+
+=end pod
+
+# vim: expandtab shiftwidth=4
