@@ -1,6 +1,8 @@
 Revision history for Hash-int
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Update copyright year
 
 0.0.6  2024-06-24T21:55:56+02:00
     - Modernize test file extension
